2004-11-04  Kensuke Matsuzaki  <zakki@peppermint.jp>

	* InitOutput.c: (winUseMsg):
	* win.h:
	* winmultiwindowwindow.c: (winMinimizeWindow):
	* winmultiwindowwm.c: (PushMessage), (UpdateName),
	(PreserveWin32Stack), (winMultiWindowWMProc),
	(winMultiWindowXMsgProc), (winInitWM), (winInitMultiWindowWM),
	(CheckAnotherWindowManager):
	* winprocarg.c: (winInitializeDefaultScreens),
	(ddxProcessArgument):
	* winscrinit.c: (winFinishScreenInitFB):
	* wintrayicon.c: (winHandleIconMessage):
	* winwin32rootless.c: (InitWin32RootlessEngine),
	(winMWExtWMResizeFrame), (winMWExtWMRestackFrame),
	(winMWExtWMStartDrawing), (winMWExtWMRootlessSwitchWindow),
	(winMWExtWMSetNativeProperty):
	* winwin32rootlesswindow.c: (winMWExtWMReorderWindows),
	(winMWExtWMDecorateWindow), (winMWExtWMUpdateWindowDecoration),
	(winIsInternalWMRunning), (winMWExtWMRestackWindows):
	* winwin32rootlesswndproc.c: (winMWExtWMWindowProc):
	* winwindow.h:
	* winwndproc.c: (winWindowProc):
	Add internalwm mode.

2004-10-28  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h:
	add fRetryCreateSurface
	* winshaddnl.c (winBltExposedRegionsShadowDDNL):
	try to recreate the primary surface if it was lost
	* winshaddnl.c (winCreatePrimarySurfaceShadowDDNL):
	mark screen to retry creating the primary surface if it failed

2004-10-23  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig (winConfigFiles):
	Simplify /etc/X11/font-dirs parsing

2004-10-20  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.rc, winresource.h, winwndproc.c:
	Add ShowCursor entry to tray menu 

2004-10-20  Alexander Gottwald  <ago at freedesktop dot org>

	* Imakefile:
	Add ETCX11DIR to DEFINES
	* InitOutput.c (InitOutput):
	* winconfig.c (winConfigFiles) :
	Add entries from /etc/X11/font-dirs to default fontpath

2004-10-16  Alexander Gottwald  <ago at freedesktop dot org>

	* winprocarg.c (winInitializeDefaultScreens, ddxProcessArgument):
	* win.h: