@@ -813,7 +813,9 @@ winMinimizeWindow (Window id)
 {
   WindowPtr		pWin;
   winPrivWinPtr	pWinPriv;
+#ifdef XWIN_MULTIWINDOWEXTWM
   win32RootlessWindowPtr pRLWinPriv;
+#endif
   HWND hWnd;
   ScreenPtr pScreen = NULL;
   winPrivScreenPtr pScreenPriv = NULL;
@@ -829,12 +831,16 @@ winMinimizeWindow (Window id)
   if (pScreen) pScreenPriv = winGetScreenPriv(pScreen);
   if (pScreenPriv) pScreenInfo = pScreenPriv->pScreenInfo;
 
+#ifdef XWIN_MULTIWINDOWEXTWM
   if (pScreenPriv && pScreenInfo->fInternalWM)
     {
       pRLWinPriv  = (win32RootlessWindowPtr) RootlessFrameForWindow (pWin, FALSE);
       hWnd = pRLWinPriv->hWnd;
     }
   else
+#else
+  if (pScreenPriv)
+#endif
     {
       pWinPriv = winGetWindowPriv (pWin);
       hWnd = pWinPriv->hWnd;
