@@ -1,3 +1,9 @@
+2004-11-06  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* winwndproc.c, wintrayicon.c, winscrinit.c:
+	* winmultiwindowwindow.c:
+	Wrap all mwextwm and internalwm code with XWIN_MULTIWINDOWEXTWM
+
 2004-11-04  Kensuke Matsuzaki  <zakki@peppermint.jp>
 
 	* InitOutput.c: (winUseMsg):
